--- a/app/views/explore/trend.html.slim
+++ b/app/views/explore/trend.html.slim
@@ -1,7 +1,7 @@
 - content_for(:title) do
-  | 所有 - 发现
+  | 趋势 - 发现
 .explore.top-blank
   .row
     .small-12.columns
-      = render partial: 'head', locals: { type: 'all' }
+      = render partial: 'head', locals: { type: 'trend' }
       h1 hello world
