--- a/app/views/explore/_head.html.slim
+++ b/app/views/explore/_head.html.slim
@@ -12,4 +12,4 @@
         = link_to '趋势', trend_explore_index_path, class: active_for(type, 'trend')
     .list
       .small-3.large-3.columns
-        = link_to '所有', trend_explore_index_path, class: active_for(type, 'all')
+        = link_to '所有', all_explore_index_path, class: active_for(type, 'all')
