--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -6,12 +6,15 @@
 .category {
   text-align: center;
   border: 1px solid #ddd;
-  padding: 2rem 0;
+  padding-top: 2rem;
   margin-bottom: 1rem;
   width: 100%;
 
   a {
     color: #333;
     font-size: 1.5rem;
+    display: inline-block;
+    padding-bottom: 2rem;
+    width: 100%;
   }
 }
