--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -1,7 +1,32 @@
 - content_for(:title) do
   | 所有 - 发现
-.explore.top-blank
+
+.explore-all
   .row
     .small-12.columns
-      = render partial: 'head', locals: { type: 'all' }
-      h1 hello world
+      = link_to explore_index_path, class: 'back-link' do
+        | 回到广场
+        span <
+      .row.search.collapse
+        .small-9.large-4.columns
+          = text_field_tag 'search', nil, placeholder: '项目名称'
+        .small-3.large-1.end.columns
+          a.button.postfix href="#" 搜索
+
+      .small-12.large-10.columns.projects
+        - 10.times do
+            .row.project
+              .small-4.large-2.columns
+                = link_to project_path(1) do
+                  - image_tag 'xingbake.jpg'
+              .small-8.large-10.columns
+                .name-area
+                  h4.name
+                    = link_to '项目一', project_path(1)
+                  p.sub-name
+                   | 这是一个项目的简要描述
+                .team
+                  p
+                    | team 成员介绍
+        .load-more
+          button.small Load More
