修改一个链接名称

--- a/app/views/explore/index.html.slim
+++ b/app/views/explore/index.html.slim
@@ -34,4 +34,4 @@
                 p
                   | 精品2 - 热爱你的生活
             .small-12.columns.all-projects
-              = link_to '查看所有分类', all_explore_index_path
+              = link_to '查看所有项目', all_explore_index_path
