--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -1,122 +1,39 @@
-div.row.project_container
-  div.large-2.columns
-    = image_tag( @project.logo_url, size: "200x200" )
-  div.large-10.columns
-    h4.project_name = @project.name
-    div.row
-      div.large-7.columns
-        = @project.description
-    ul.sub-nav.right
-      li
-        - if current_user.try(:star?, @project)
-          button#star_project.has_starred data-uri=stars_path data-id=@project.id 已关注
-        - else
-          button#star_project.unstarred data-uri=stars_path data-id=@project.id 关注
-      li
-        button.button 约谈 
-    div.row
-      div.large-7.columns
-        ul.sub-nav
+.project-show.top-blank
+  .row.head
+    .small-6.large-2.columns
+      = image_tag 'xingbake.jpg'
+    .small-6.large-10.columns
+      .name-area
+        h4.name
+          = link_to '项目一', project_path(1)
+        p.sub-name
+         | 这是一个项目的简要描述
+  .row.operate
+    .small-6.columns
+      = link_to '关注', '#'
+    .small-6.columns
+      = link_to '约谈', '#'
+  .row.tab-content
+    .small-4.columns.list
+      = link_to '基本', '#', class: 'active'
+    .small-4.columns.list
+      = link_to '团队', '#'
+    .small-4.columns.list
+      = link_to '投资', '#'
+  .row.content
+    .small-12.columns
+      .basic-content
+        ul.image data-orbit=""
           li
-            p.address 
-              = project_address(@project)
+            = image_tag 'p/1.jpg'
+            .orbit-caption 正面
           li
-            p.industry
-              | 电子商务
-  hr 
-  div.row
-    div.large-12.columns
-      = image_tag("project_example.png", width: "100%")
-  hr
-  div.row
-    div.large-12.columns
-      p.columns
-        | 这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.
-      p.columns
-        | 这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.这是一段关于产品的简单的介绍.
-  hr 
-div.row.team
-  div.large-12.columns
-    div.row.member
-      div.large-2.columns.logo
-        = image_tag("121.jpg", width: "200x200")
-      div.large-10.columns
-        h3.name 
-          = link_to "李亚飞", user_path(1) 
-        p.title CTO
-        p.description 这是一个CTO的个人介绍.
-    hr
-
-div.row.invest
-  div.large-12.columns
-    div.row.investors
-      div.large-4.columns
-        div.row.investor
-          div.large-4.columns
-            = image_tag("121.jpg", width: "200x200")
-          div.large-8.columns
-            h3.name
-              = link_to "李投资", user_path(1)
-            p.title Partner at Innovation Works( IW).
-            p.description 另一个投资人的介绍.
-
-      div.large-4.columns
-        div.row.investor
-          div.large-4.columns
-            = image_tag("121.jpg", width: "200x200")
-          div.large-8.columns
-            h3.name
-              = link_to "李投资", user_path(1)
-            p.title Partner at Innovation Works( IW).
-            p.description 另一个投资人的介绍.
-          
-      div.large-4.columns
-        div.row.investor
-          div.large-4.columns
-            = image_tag("121.jpg", width: "200x200")
-          div.large-8.columns
-            h3.name
-              = link_to "李投资", user_path(1)
-            p.title Partner at Innovation Works( IW).
-            p.description 另一个投资人的介绍.
-      hr
-
-    - if money_require = @project.opened_money_require
-      div#invest
-        = render partial: "syndicates/invest", locals: { money_require: money_require }
-      div.reveal-modal.medium#add-syndicate-modal data-reveal="" 
-        h4 项目投资
-        hr
-        = simple_form_for(Investment.new(money_require_id: money_require.id), url: syndicates_path, html: { id: 'new_syndicate' }) do |f|
-          = f.hidden_field :money_require_id
-          = f.input :money
-          = f.button :submit, "提交"
-        a.close-reveal-modal &#215;
-      div.reveal-modal.medium#leader-confirm-modal data-reveal=""
-        h4 领投人确认
-        hr
-        p 请确认以下融资需求与线下谈论的一致:
-        = simple_form_for money_require, url: leader_confirm_money_require_path(money_require), html: { id: 'leader_confirm_form' } do |f|
-          = f.input :money, readonly: true
-          = f.input :share, readonly: true
-          = f.input :deadline, readonly: true
-          = f.input :description, readonly: true
-          = f.button :submit, "确认无误"
-        a.close-reveal-modal &#215;
-      hr
-
-    div.row.jobs
-      div.large-12.columns
-        div.job 
-          h3 工作招聘
-        div.large-3.columns.large-centered
-          a.button 我感兴趣
-
-    hr
-
-    div.row.discussion
-      div.large-12.columns
-        h3 讨论区
-        = text_area_tag("d")
-          
-          
+            = image_tag 'p/2.jpg'
+            .orbit-caption 反面
+          li
+            = image_tag 'p/3.jpg'
+            .orbit-caption 侧面 
+          li
+            = image_tag 'p/4.jpg'
+            .orbit-caption 后面 
+        h1 基本介绍
