--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -3,6 +3,9 @@
   
   .head {
     padding-bottom: 2rem;
+    .name a {
+      color: #FF2D2D;
+    }
   }
 
   .operate {
@@ -43,7 +46,90 @@
     margin-top: 2rem;
     
     .image {
-      text-align: center;
+      margin-bottom: 2rem;
     }
-  }
+
+    .title {
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .invest {
+      .box {
+        background-color: #eee;
+        padding: 1rem 1.5rem;
+        margin: 0.5rem 0;
+
+        .sub-title {
+          color: #888;
+          font-size: 0.9rem;
+        }
+
+        .sub-content {
+          font-weight: 700;
+          font-size: 1.1rem;
+        }
+      }
+
+      .more-info {
+        text-align: center;
+        margin: 1rem 0;
+      }
+
+      .invest-button {
+        text-align: center;
+      }
+    }
+
+    .team {
+      margin-top: 2rem;
+      .more-info {
+        text-align: center;
+        margin: 1rem 0;
+      }
+    }
+    .person {
+      padding: 1rem 0;
+
+      .name {
+        padding-bottom: 0.2rem;
+        a {
+          color: #333;
+          font-weight: 600;
+          font-size: 1.1rem;
+        }
+      }
+
+      .job-title {
+        color: #999;
+        font-weight: 500;
+        padding-bottom: 0.5rem;
+      }
+
+      .description {
+        color: #999;
+      }
+
+    }// person
+
+    .job {
+
+      .job-box {
+        border: 1px solid #ddd;
+        padding: 1rem 0;
+        margin: 1rem;
+        table {
+          border: none;
+        }
+
+        .job-interest {
+          text-align: center;
+        }
+
+        &:hover {
+        }
+      }
+    }
+  }//content
 }
