--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -1,3 +1,5 @@
+- content_for(:title) do 
+  | 项目一
 .project-show.top-blank
   .row.head
     .small-6.large-2.columns
@@ -36,4 +38,103 @@
           li
             = image_tag 'p/4.jpg'
             .orbit-caption 后面 
-        h1 基本介绍
+        h3.title 基本介绍
+        p
+          | 星巴克是美国一家连锁咖啡公司的名称，1971年成立，为全球最大的咖啡连锁店，其总部坐落美国华盛顿州西雅图市。星巴克在美国和加拿大的学生与城市白领中非常流行。除咖啡外，星巴克亦有茶、馅皮饼及蛋糕等商品。部分星巴克店甚至与超级市场，书店等异业结盟，于合作店铺内觅地开业.
+        p
+          | We have a variety of investors that we're actively working with: angels, angel funds, high-net-worth individuals, private equity firms, investment banks, and other institutions - over 500 are ready to join the platform.
+
+        .invest
+          h3.title 投资情况
+          h4 当前轮次 ( 2014.4.11 - )
+          .row
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 计划融资
+                h5.sub-content 100万
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 领投人
+                h5.sub-content xx 正在领投 
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 已获融资
+                h5.sub-content xx 80万
+            .small-12.columns.more-info
+              = link_to '更多投资信息...', '#'
+            .small-12.columns.invest-button
+              button 我要投资
+          hr
+          h4 历史投资 ( 2013.1.11 - 2013.3.11 )
+          .row
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 融资规模
+                h5.sub-content 100万
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 领投人
+                h5.sub-content xx 正在领投 
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 当时估值
+                h5.sub-content 1000万
+            .small-12.large-6.columns
+              .box
+                .sub-title
+                  | 融资花费时间
+                h5.sub-content 10天
+
+        .team
+          h3.title 团队情况
+          .row
+            - 3.times do 
+              .small-12.large-6.columns
+                .person
+                  .row
+                    .small-4.large-3.columns
+                      = image_tag 'm/u1.png'
+                    .small-8.large-9.columns
+                      .name 
+                        = link_to '李亚飞', user_path(1)
+                      .job-title CTO
+                      .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
+          .small-12.columns.more-info
+            = link_to '查看更多团队故事...'
+        .job
+          h3.title 招人情况
+          h4 正在招人
+          .row
+            - 3.times do 
+              .small-12.large-6.columns
+                .job-box
+                  table
+                    tr
+                      td 职位
+                      td 软件开发工程师
+                    tr
+                      td 负责内容
+                      td 开发软件
+                    tr
+                      td 报酬
+                      td 月薪: 20k - 30k
+                    tr
+                      td 
+                      td 期权: 30%
+                    tr
+                      td 
+                      td 股权: 1%
+                    tr
+                      td 可选程
+                      td 是
+                    tr
+                      td 可兼职
+                      td 是
+                  .job-interest
+                    button.small 我感兴趣
