--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -1,2 +1,4 @@
-ul.small-block-grid-3
-  = render partial: 'members/member', collection: @members
+.owner
+  .row
+    .small-12.large-6.columns
+      = image_tag 'm/u1.png'
