--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -15,13 +15,7 @@
       = link_to '关注', '#'
     .small-6.columns
       = link_to '约谈', '#'
-  .row.tab-content
-    .small-4.columns.list
-      = link_to '基本', '#', class: 'active'
-    .small-4.columns.list
-      = link_to '团队', '#'
-    .small-4.columns.list
-      = link_to '投资', '#'
+  = render partial: 'show_tab', locals: { type: 'basic' }
   .row.content
     .small-12.columns
       .basic-content
