--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -29,6 +29,7 @@
     border-bottom: 1px solid #ddd;
     .list {
       text-align: center;
+      padding-bottom: 0;
       a {
         color: #333;
         font-size: 1.2rem;
