--- a/app/views/projects/_header.html.slim
+++ b/app/views/projects/_header.html.slim
@@ -1,8 +1,8 @@
-div.centerred
-  dl.sub-nav
-    = content_tag("dd", class: active_for(stage, :stage0)) do
-      = link_to "基本信息","#"
-    = content_tag("dd", class: active_for(stage, :stage1)) do
-      = link_to "团队信息","#"
-    = content_tag("dd", class: active_for(stage, :stage2)) do
-      = link_to "创业需求","#"
+.head
+  ul.small-block-grid-1.large-block-grid-3.list
+    li
+      = link_to "1. 基本信息","#", class: active_for(stage, :stage0)
+    li
+      = link_to "2. 团队信息","#", class: active_for(stage, :stage1)
+    li
+      = link_to "3. 创业需求","#", class: active_for(stage, :stage2)
