创建项目第2步的初步

--- a/app/assets/stylesheets/heads.css.scss
+++ b/app/assets/stylesheets/heads.css.scss
@@ -9,6 +9,10 @@
     margin-right: 0.5rem;
     font-weight: 400;
     font-size: 1rem;
+    a {
+      display: inline-block;
+      margin-left: 1rem;
+    }
   }
 }
 
