--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -5,6 +5,7 @@ nav.tab-bar
   h1.title.middle-text
     = link_to Setting.site_name, root_path
     .top-right.right
+      = link_to  '创建新项目', new_project_path
       = link_to  '注册', new_user_registration_path
 aslide.left-off-canvas-menu
   ul.off-canvas-list
