--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -47,4 +47,5 @@
         .row
           .small-12.large-6.columns
             .control-actions
-              button 下一步
+              /*button 下一步*/
+              = link_to '下一步', stage1_project_path(1), class: 'button'
