--- a/app/views/projects/new.html.slim
+++ b/app/views/projects/new.html.slim
@@ -47,7 +47,8 @@
             label for='weixin' 微信
             = text_field_tag '微信', nil, placeholder: ''
         .row
-          .small-12.large-6.columns
+          .small-12.columns
+            hr
             .control-actions
               /*button 下一步*/
               = link_to '下一步', stage1_project_path(1), class: 'button'
