--- a/app/views/projects/stage1.html.slim
+++ b/app/views/projects/stage1.html.slim
@@ -1,7 +1,57 @@
 - content_for(:title) do
   | 团队信息 - 创建项目
 .project-new.top-blank
-  .row
+  .row.stage1
     .small-12.columns
       = render partial: "header", locals: { stage: :stage1 }
-      h1 团队信息
+      .owner
+        .person
+          .row
+            .small-4.large-3.columns
+              = image_tag 'm/u1.png'
+            .small-8.large-9.columns
+              .name 
+                = link_to '李亚飞( Owner )', user_path(1)
+              .job-title CTO
+              .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
+              .edit
+                = link_to '编辑', '#'
+
+      .story
+        .row
+          .small-12.columns
+            h3.title 我们的故事
+            .edit
+              = link_to '编辑', '#'
+        p 我们是一帮好人
+        p 1974.02--1978.10 北京市运输公司汽车修理厂工人
+        p 1978.10—1982.08 中国人民大学中共党史系中共党史专业学生
+        p 1982.08—1983.09 中央教育行政学院教员
+        p 1983.09—1986.07 中国人民大学中共党史系硕士研究生
+        p 1986.07—1989.03 北京市委研究室干部、副处级调研员
+        p 1989.03—1991.04 国务院台办二组副处长
+
+      .members
+        .row
+          .small-12.columns
+            h3.title 我们的成员
+            .edit
+              = link_to '添加', '#'
+        ul.small-block-grid-1.large-block-grid-2
+          - 6.times do
+            li
+              .person
+                .row
+                  .small-4.large-3.columns
+                    = image_tag 'm/u1.png'
+                  .small-8.large-9.columns
+                    .name 
+                      = link_to '李亚飞', user_path(1)
+                    .job-title CTO
+                    .description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.
+        .control-actions
+          button.small 添加新的成员
+    hr
+    .control-actions
+      = link_to '下一步', stage2_project_path(1), class: 'button'
+      = link_to '返回上一步', new_project_path(1), class: 'back-link'
