--- a/app/views/projects/stage2.html.slim
+++ b/app/views/projects/stage2.html.slim
@@ -1,23 +1,90 @@
-= render partial: "header", locals: { stage: :stage2 }
-h1 创业需求
-= simple_form_for @project, url: stage2_project_url(@project.id), method: 'post' do |f|
-  h4 我要融资
-  = check_box_tag :money_require
-  hr
-  = f.simple_fields_for :money_requires, @money_require do |p|
-    /TODO 处理金钱单位
-    = p.input :money
-    = p.input :share
-    = p.input :description
-  h4 我要招人
-  = check_box_tag :person_reuqire
-  hr
-  = f.simple_fields_for :person_requires, @person_require do |p|
-    = p.input :title
-    = p.input :pay
-    = p.input :stock
-    = p.input :option
-    = p.input :description
-  div.control-options
-    = link_to '上一步', stage1_project_path(@project), class: 'button cancel left'
-    = f.button :submit, "确认完成", class: 'left'
+- content_for(:title) do
+  | 创业需求 - 创建项目
+.project-new.top-blank
+  .row.stage2
+    .small-12.columns
+      = render partial: "header", locals: { stage: :stage2 }
+      form
+        div.title-wrapper
+          = check_box_tag 'money_require_flag'
+          label for="money_require_flag"
+            h4.title 我要融资
+          label for="money" 计划融资
+          .row.collapse
+            .small-1.columns
+              span.prefix ¥
+            .small-11.large-6.end.columns
+              = text_field_tag 'money', nil
+          label for="fund" 出让股份
+          .row.collapse
+            .small-11.large-3.columns
+              = text_field_tag 'fund', nil
+            .small-1.large-1.end.columns
+              span.postfix %
+
+        hr
+        div.title-wrapper
+          = check_box_tag 'person_require_flag'
+          label for="person_require_flag"
+            h4.title 我要招人 
+          .row
+            - 3.times do 
+              .small-12.large-6.columns
+                .job-box
+                  table
+                    tr
+                      td 职位
+                      td 软件开发工程师
+                    tr
+                      td 负责内容
+                      td 开发软件
+                    tr
+                      td 报酬
+                      td 月薪: 20k - 30k
+                    tr
+                      td 
+                      td 期权: 30%
+                    tr
+                      td 
+                      td 股权: 1%
+                    tr
+                      td 可选程
+                      td 是
+                    tr
+                      td 可兼职
+                      td 是
+          label for='title' 职位
+          .row
+            .small-12.large-6.columns
+              = text_field_tag 'title'
+          label for="content" 工作内容
+          .row
+            .small-12.large-6.columns
+              = text_area_tag 'content'
+          label 月薪
+          .row
+            .small-12.large-6.columns
+              = text_field_tag 'content'
+          label 期权
+          .row
+            .small-12.large-6.columns
+              = text_field_tag 'content'
+          label 股权
+          .row
+            .small-12.large-6.columns
+              = text_field_tag 'content'
+          label 可远程
+          .row
+            .small-12.large-6.columns
+              = check_box_tag 'remote'
+          label 可兼职
+          .row
+            .small-12.large-6.columns
+              = check_box_tag 'part'
+          .control-actions
+            button.small 添加新的招聘
+
+        hr
+        .control-actions
+          button 确认完成
+          = link_to '上一步', stage1_project_path(@project), class: 'back-link'
