添加最小高度限制

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,7 @@ html
       .inner-wrap
         = render 'layouts/navigation'
         section.main-section ng-app="app"
-          = yield
+          .main-container
+            = yield
           = render 'layouts/foot'
         a.exit-off-canvas
