--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -3,17 +3,26 @@
 .user-new.top-blank
   .row
     .small-12.large-10.large-centered.columns
-      = devise_error_messages!
-      p #{flash[:notice]}
-      = form_for :user, url: user_registration_path do |f|
+      form ng-controller='RegistrationController' ng-submit='submit()'
         h1 加入#{Setting.site_name}
         p 真正的互联网式的创业服务
         .row
           .small-12.large-6.columns
-            = f.text_field 'name', placeholder: '真实姓名'
-            = text_field_tag 'email', nil, placeholder: '邮箱地址'
-            = password_field_tag 'password', nil, placeholder: '密码'
-            = password_field_tag 'password_confirm', nil, placeholder: '再次确认密码'
-            /*button 提交*/
-            = f.submit '马上注册', class: 'button'
-            = link_to '已有账号, 登录?', new_user_session_path, class: 'login-link'
+            = text_field_tag 'name', nil, placeholder: '真实姓名', 'ng-model'=> 'name', 'ng-class'=> '{ error: errors.name }'
+            small.error.ng-cloak ng-show="errors.name" {{ errors.name }}
+        .row
+          .small-12.large-6.columns
+            = text_field_tag 'email', nil, placeholder: '邮箱地址', 'ng-model'=> 'email', 'ng-class'=> '{ error: errors.email }'
+            small.error.ng-cloak ng-show="errors.email" {{ errors.email }}
+        .row
+          .small-12.large-6.columns
+            = password_field_tag 'password', nil, placeholder: '密码', 'ng-model'=> 'password', 'ng-class'=> '{ error: errors.password }'
+            small.error.ng-cloak ng-show="errors.password" {{ errors.password }}
+        .row
+          .small-12.large-6.columns
+            = password_field_tag 'password_confirm', nil, placeholder: '再次确认密码', 'ng-model'=> 'password_confirm', 'ng-class'=> '{ error: errors.password_confirm }'
+            small.error.ng-cloak ng-show="errors.password_confirm" {{ errors.password_confirm }}
+        p.alert.ng-cloak
+          |{{ error_message }}
+        = submit_tag '马上注册', class: 'button'
+        = link_to '已有账号, 登录?', new_user_session_path, class: 'login-link'
