让菜单可以全屏消失

--- a/app/assets/stylesheets/heads.css.scss
+++ b/app/assets/stylesheets/heads.css.scss
@@ -72,6 +72,14 @@ a.user-link {
     top: -10px;
   }
 }
+.user-dropdown-exit-link {
+  position: fixed;
+  top: 3.5rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
 
 // 提示框
 .alert-box {
