--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,16 +4,16 @@
 .start-content.top-blank
   .row
     .small-12.large-10.large-centered.columns
-      form
+      form ng-submit='submit()' ng-controller='HomeController'
         .row
           .small-12.large-6.columns
             h1.heading 创业, 找钱, 找人, 更容易, 更简单
             p.sub-heading 投资人, 小伙伴, 都在等着你的创业项目. 想要像互联网式的创业融资与招人服务? 马上注册.
 
           .small-12.large-6.columns
-            = text_field_tag 'username', nil, placeholder: '你的真实姓名', 'ng-model'=> 'username'
+            = text_field_tag 'name', nil, placeholder: '你的真实姓名', 'ng-model'=> 'name'
             = text_field_tag 'email', nil, placeholder: '你的邮箱', 'ng-model'=> 'email'
-            = text_field_tag 'password', nil, placeholder:  '输入一个密码', 'ng-model'=> 'password'
+            = password_field_tag 'password', nil, placeholder:  '输入一个密码', 'ng-model'=> 'password'
             button 注册
 
 .refine-projects-content
