修正登录按钮的颜色

--- a/app/assets/stylesheets/heads.css.scss
+++ b/app/assets/stylesheets/heads.css.scss
@@ -9,6 +9,12 @@
     margin-right: 0.5rem;
     font-weight: 400;
     font-size: 1rem;
+
+    .login-button a {
+      display: inline-block;
+      margin-right: 0.5rem;
+      color: #F7F7F7;
+    }
   }
 }
 
