--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -31,8 +31,9 @@ nav.tab-bar
                   = link_to '注销', destroy_user_session_path, method: 'DELETE'
         .user-dropdown-exit-link ng-show= 'dropdown_open' ng-click=' dropdown_open = false'
       - else
-        = link_to  '注册', new_user_registration_path
-        = link_to  '登录', new_user_session_path
+        .login-button
+          = link_to  '注册', new_user_registration_path
+          = link_to  '登录', new_user_session_path
 aslide.left-off-canvas-menu
   ul.off-canvas-list
     li
