--- a/app/assets/stylesheets/heads.css.scss
+++ b/app/assets/stylesheets/heads.css.scss
@@ -93,3 +93,13 @@ a.user-link {
 .alert-box {
   margin-bottom: 0 !important;
 }
+
+$top-nologin-height: 80px;
+// 未登录时的 top-bar
+.top-nologin-nav-wrap {
+  .top-bar input {
+    margin-top: 1rem;
+    font-size: 1rem;
+    width: 20rem;
+  }
+}
