页面支持pad之类的中型屏幕

--- a/app/views/explore/trend.html.slim
+++ b/app/views/explore/trend.html.slim
@@ -10,7 +10,7 @@
           .recommend-projects
             .row
               - 6.times do
-                .small-12.large-4.columns.recommend-project
+                .small-12.medium-6.large-4.columns.recommend-project
                   = link_to root_path do
                     - image_tag 'j/jingpin2.jpg'
                   p
@@ -20,7 +20,7 @@
           .recommend-projects
             .row
               - 6.times do
-                .small-12.large-4.columns.recommend-project
+                .small-12.medium-6.large-4.columns.recommend-project
                   = link_to root_path do
                     - image_tag 'j/jingpin2.jpg'
                   p
@@ -30,7 +30,7 @@
           .recommend-projects
             .row
               - 6.times do
-                .small-12.large-4.columns.recommend-project
+                .small-12.medium-6.large-4.columns.recommend-project
                   = link_to root_path do
                     - image_tag 'j/jingpin3.jpg'
                   p
