--- a/app/views/home/_login.html.slim
+++ b/app/views/home/_login.html.slim
@@ -3,7 +3,7 @@
 
 .timeline.top-blank
   .row
-    .small-12.large-10.columns
+    .small-12.medium-10.medium-centered.columns
       - 5.times do
         .box
           .row.collapse
