--- a/app/views/jobs/_projects.html.slim
+++ b/app/views/jobs/_projects.html.slim
@@ -1,8 +1,8 @@
 - projects.each do |project|
   .row.job-project
-    .small-4.large-2.columns
+    .small-4.medium-3.large-2.columns
       = image_tag(project.logo_url, size: "200x200")
-    .small-8.large-10.columns
+    .small-8.medium-9.large-10.columns
       .name-area
         h5.name
           = link_to '项目一', project_path(1)
