--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -8,9 +8,9 @@
         | 回到广场
         span <
       .row.search.collapse
-        .small-9.large-4.columns
+        .small-9.medium-6.large-4.columns
           = text_field_tag 'search', nil, placeholder: '项目名称'
-        .small-3.large-1.end.columns
+        .small-3.medium-1.large-1.end.columns
           a.button.postfix href="#" 搜索
 
       .small-12.large-10.columns.projects
