--- a/app/views/jobs/index.html.slim
+++ b/app/views/jobs/index.html.slim
@@ -8,9 +8,9 @@
     .row
       .small-12.columns
         .row.search.collapse
-          .small-9.large-4.columns
+          .small-9.medium-6.large-4.columns
             = text_field_tag 'search', nil, placeholder: '关键字'
-          .small-3.large-1.end.columns
+          .small-3.medium-1.large-1.end.columns
             a.button.postfix href="#" 工作搜索
 
         = render partial: "projects", locals: { projects: @projects }
