--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -7,19 +7,19 @@
         h1 加入#{Setting.site_name}
         p 真正的互联网式的创业服务
         .row
-          .small-12.large-6.columns
+          .small-12.medium-8.large-7.columns
             = text_field_tag 'name', nil, placeholder: '真实姓名', 'ng-model'=> 'name', 'ng-class'=> '{ error: errors.name }', 'ng-blur'=> ' delete_error_on("name") '
             small.error.ng-cloak ng-show="errors.name" {{ errors.name }}
         .row
-          .small-12.large-6.columns
+          .small-12.medium-8.large-7.columns
             = text_field_tag 'email', nil, placeholder: '邮箱地址', 'ng-model'=> 'email', 'ng-class'=> '{ error: errors.email }', 'ng-blur'=> 'email_validate()'
             small.error.ng-cloak ng-show="errors.email" {{ errors.email }}
         .row
-          .small-12.large-6.columns
+          .small-12.medium-8.large-7.columns
             = password_field_tag 'password', nil, placeholder: '密码', 'ng-model'=> 'password', 'ng-class'=> '{ error: errors.password }', 'ng-blur'=> ' delete_error_on("password") '
             small.error.ng-cloak ng-show="errors.password" {{ errors.password }}
         .row
-          .small-12.large-6.columns
+          .small-12.medium-8.large-7.columns
             = password_field_tag 'password_confirm', nil, placeholder: '再次确认密码', 'ng-model'=> 'password_confirm', 'ng-class'=> '{ error: errors.password_confirm }', 'ng-blur'=> 'password_confirm_validate()'
             small.error.ng-cloak ng-show="errors.password_confirm" {{ errors.password_confirm }}
         p.alert.ng-cloak
