--- a/app/assets/stylesheets/heads.css.scss
+++ b/app/assets/stylesheets/heads.css.scss
@@ -27,6 +27,11 @@
   label {
     cursor: default;
   }
+  .search {
+    margin: 0.66667rem;
+    width: 92%;
+    background-color: #F1F1F1;
+  }
 }
 
 // 用户菜单
@@ -120,5 +125,45 @@ $top-nologin-height: 80px;
       padding: 0.5rem 2rem !important;
       margin-right: 1rem;
     }
+  }
+}
+
+// 登录后菜单
+//
+.nav-big-wrapper {
+  border-bottom: 1px solid #ddd;
+}
+
+@media only screen and (min-width: 1080px) {
+  .nav-small-wrapper {
+    display: none;
+  }
+  .nav-big-wrapper {
+    .messagebox {
+      padding: 1rem !important;
+      display: inline;
+      border: 1px solid #ddd;
+      color: #aaa;
+    }
+    .user-link {
+      padding: 1rem !important;
+      display: inline;
+    }
+  }
+  .user-dropdown {
+    top: 80px;
+  }
+  .top-bar-section .search {
+    margin: 1.2rem 0 !important;
+    width: 20rem !important;
+  }
+  .top-bar-section .left a {
+    padding: 0 1rem !important;
+  }
+}
+
+@media only screen and (max-width: 1079px) {
+  .nav-big-wrapper {
+    display: none;
   }
 }
