--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,66 +1,28 @@
-nav.tab-bar
-  section.left-small
-    a.left-off-canvas-toggle.menu-icon href="#"
-      span
-  h1.title.middle-text
-    = link_to Setting.site_name, root_path, class: 'title'
-    .top-right.right
-      - if current_user
-        = link_to current_user.name, '', class: 'user-link', 'ng-init' => 'dropdown_open = false ', 'ng-click'=> ' dropdown_open = ! dropdown_open '
-        .user-dropdown.ng-cloak ng-show=' dropdown_open '
-          ul.small-block-grid-1.medium-block-grid-2
-            li
-              ul.project
-                h6.title 项目
-                li
-                  = link_to '项目一', project_path(1)
-                li
-                  = link_to '项目二', project_path(1)
-                li
-                  = link_to '创建新项目', new_project_path
-            li
-              ul.about-me
-                h6.title 我
-                li
-                  = link_to '申请投资人', new_investor_path
-                li
-                  = link_to '我的主页', user_path(current_user)
-                li
-                  = link_to '设置',  edit_user_path(current_user)
-                li
-                  = link_to '注销', destroy_user_session_path, method: 'DELETE'
-        .user-dropdown-exit-link ng-show= 'dropdown_open' ng-click=' dropdown_open = false'
-      - else
-        .login-button
-          = link_to  '注册', new_user_registration_path
-          = link_to  '登录', new_user_session_path
-aslide.left-off-canvas-menu
-  ul.off-canvas-list
-    li
-      label Menu
-    li
-      = link_to root_path do
-        i.fi-home
-        | 首页
-    li
-      = link_to refine_index_path do
-        i.fi-heart
-        | 精品
-    li
-      = link_to categories_path do
-        i.fi-thumbnails
-        | 分类
-    li
-      label Find
-    li
-      = link_to explore_index_path do
-        i.fi-eye
-        | 探索
-    li
-      = link_to investors_path do
-        i.fi-torsos-all
-        | 投资人
-    li
-      = link_to jobs_path do
-        i.fi-address-book
-        | 找工作
+.nav-small-wrapper
+  nav.tab-bar
+    section.left-small
+      a.left-off-canvas-toggle.menu-icon href="#"
+        span
+    h1.title.middle-text
+      = link_to Setting.site_name, root_path, class: 'title'
+      .top-right.right
+        = render 'layouts/messagebox'
+        = render 'layouts/user'
+  aslide.left-off-canvas-menu
+    ul.off-canvas-list
+      = render partial: 'layouts/menu', locals: { top: false }
+.nav-big-wrapper
+  nav.top-bar data-topbar=""
+    ul.title-area
+      li.name
+        h1
+          = link_to Setting.site_name, root_path, class: 'title'
+    section.top-bar-section
+      ul.left
+        = render partial: 'layouts/menu', locals: { top: true }
+      ul.right
+        li
+          = render 'layouts/messagebox'
+        li
+          = render 'layouts/user'
+= render 'layouts/user_dropdown'
