修正创建项目导航偏移的问题

--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -7,6 +7,7 @@
     .list {
       text-align: center;
       width: 100%;
+      margin-left: 0;
       li {
         border: 1px solid #ddd;
         padding: 0;
