团队创建的基本功能与路由

--- a/app/assets/stylesheets/project_new.css.scss
+++ b/app/assets/stylesheets/project_new.css.scss
@@ -51,6 +51,12 @@
       right: 1rem;
       top: 0.5rem;
     }
+    .cancel {
+      margin-left: 0.5rem;
+    }
+    img {
+      width: 100%;
+    }
   }
 
   .stage2 {
