--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -116,7 +116,10 @@
   padding: 1rem 0;
 
   .name {
-    padding-bottom: 0.2rem;
+    padding-bottom: 0.5rem;
+    @media only screen and (max-width: 40em) {
+      padding-bottom: 0.2rem;
+    }
     a {
       color: #333;
       font-weight: 600;
