--- a/app/assets/templates/project/basic.html.slim
+++ b/app/assets/templates/project/basic.html.slim
@@ -1,5 +1,5 @@
 .head
-  ul.small-block-grid-1.large-block-grid-3.list
+  ul.small-block-grid-1.medium-block-grid-3.list
     li
       a.active href='javascript:void(0)' 1. 基本信息
     li
@@ -20,7 +20,7 @@ form.stage0 ng-submit='submit()'
   .row
     .small-12.large-6.columns
       label for='oneword' 一句话
-      input id='oneword' type='text' placeholder='一句话说明, 将显示在项目副标题' ng-model='project.oneword' ng-class= '{ error: errors.onword }'
+      input id='oneword' type='text' placeholder='一句话说明, 将显示在项目副标题' ng-model='project.oneword' ng-class= '{ error: errors.oneword }'
       small.error.ng-cloak ng-show=' errors.oneword' {{ errors.oneword }}
   .row
     .small-12.large-8.columns
