--- a/app/assets/templates/project/require.html.slim
+++ b/app/assets/templates/project/require.html.slim
@@ -1,5 +1,5 @@
 .head
-  ul.small-block-grid-1.large-block-grid-3.list
+  ul.small-block-grid-1.medium-block-grid-3.list
     li
       a href='javascript:void(0)' 1. 基本信息
     li
