--- a/app/assets/templates/project/team.html.slim
+++ b/app/assets/templates/project/team.html.slim
@@ -1,39 +1,63 @@
 .head
-  ul.small-block-grid-1.large-block-grid-3.list
+  ul.small-block-grid-1.medium-block-grid-3.list
     li
       a href='javascript:void(0)' 1. 基本信息
     li
       a.active href='javascript:void(0)' 2. 团队信息
     li
       a href='javascript:void(0)' 3. 创业需求
-/*.row.stage1*/
-  /*.small-12.columns*/
-    /*.owner*/
-      /*.person*/
-        /*.row*/
-          /*.small-4.large-3.columns*/
-            /*= image_tag 'm/u1.png'*/
-          /*.small-8.large-9.columns*/
-            /*.name */
-              /*= link_to '李亚飞( Owner )', user_path(1)*/
-            /*.job-title CTO*/
-            /*.description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.*/
-            /*.edit*/
-              /*= link_to '编辑', '#'*/
+.row.stage1
+  .small-12.columns
+    .owner
+      .person.ng-cloak ng-init= 'owner_edited = false' 
+        .row
+          .small-4.large-3.columns
+            img ng-src=' {{ owner.avatar }} ' alt='owner'
+          .small-8.large-9.columns
+            div ng-hide=' owner_edited '
+              .name
+                a ng-href='/users/{{ owner.user_id }}'
+                  |{{ owner.name }}
+              .job-title
+                |{{ owner.title }}
+              .description
+                |{{ owner.description }}
+              .edit
+                a ng-click='owner_edited = true' 编辑
+            form ng-show=' owner_edited '
+              h6 编辑个人信息
+              .row
+                .small-12.medium-8.columns
+                  label for='owner_name' 真实姓名
+                  input id='owner_name' type='text' ng-value='owner.name' placeholder='真实姓名'
+              .row
+                .small-12.medium-8.columns
+                  label for='owner_title' 职位
+                  input id='owner_title' type='text' ng-value='owner.title' placeholder='你在团队的职位'
+              .row
+                .small-12.medium-8.columns
+                  label for='owner_description' 更多详细信息
+                  textarea id='owner_description' placeholder=''
+                    |{{owner.description}}
+              .row
+                .small-12.medium-8.columns
+                  .control-actions
+                    button.small 确认
+                    a.cancel ng-click='owner_edited = false' 取消
 
-    /*.story*/
-      /*.row*/
-        /*.small-12.columns*/
-          /*h3.title 我们的故事*/
-          /*.edit*/
-            /*= link_to '编辑', '#'*/
-      /*p 我们是一帮好人*/
-      /*p 1974.02--1978.10 北京市运输公司汽车修理厂工人*/
-      /*p 1978.10—1982.08 中国人民大学中共党史系中共党史专业学生*/
-      /*p 1982.08—1983.09 中央教育行政学院教员*/
-      /*p 1983.09—1986.07 中国人民大学中共党史系硕士研究生*/
-      /*p 1986.07—1989.03 北京市委研究室干部、副处级调研员*/
-      /*p 1989.03—1991.04 国务院台办二组副处长*/
+    .story
+      .row
+        .small-12.columns
+          h3.title 我们的故事
+          .edit
+            a href='#' 编辑
+      p 我们是一帮好人
+      p 1974.02--1978.10 北京市运输公司汽车修理厂工人
+      p 1978.10—1982.08 中国人民大学中共党史系中共党史专业学生
+      p 1982.08—1983.09 中央教育行政学院教员
+      p 1983.09—1986.07 中国人民大学中共党史系硕士研究生
+      p 1986.07—1989.03 北京市委研究室干部、副处级调研员
+      p 1989.03—1991.04 国务院台办二组副处长
 
     /*.members*/
       /*.row*/
@@ -49,13 +73,13 @@
                 /*.small-4.large-3.columns*/
                   /*= image_tag 'm/u1.png'*/
                 /*.small-8.large-9.columns*/
-                  /*.name */
+                  /*.name*/
                     /*= link_to '李亚飞', user_path(1)*/
                   /*.job-title CTO*/
                   /*.description 我毕业于清华大学, 创建过xx项目, xx项目, 属于二次创业.*/
       /*.control-actions*/
         /*button.small 添加新的成员*/
   /*hr*/
-  /*.control-actions*/
-    /*= link_to '下一步', stage2_project_path(1), class: 'button'*/
-    /*= link_to '返回上一步', new_project_path(1), class: 'back-link'*/
+  .control-actions
+    a.button ng-click='next()' 下一步
+    a.back-link ng-click='prev()' 返回上一步
